# universal-handler-map

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  handler_map_example.cpp
include/universal_handler_map/: dynamic_handler_map.h  handler_map.h  static_handler_map.h
src/: CMakeLists.txt  handler_map_example.cpp
test/func_tests/: CMakeLists.txt  func_tests.cpp
